[package]
name = "obsidian-rust-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
thiserror = "1.0.43"
walkdir = "2.3.3"
